TDP-966: fix sending icon on firefox

--- a/dataprep-webapp/src/components/navbar/_navigation.scss
+++ b/dataprep-webapp/src/components/navbar/_navigation.scss
@@ -85,3 +85,12 @@ header.navigation {
     }
   }
 }
+
+.feedback-sending-div {
+  height: 100%;
+  min-width: 30px;
+  .feedback-sending {
+    position: absolute;
+    right: 40px;
+  }
+}
